# float_is_close.c

./: CMakeLists.txt  README.md  auto_build.sh  float_is_close.c  float_is_close.h  float_is_close.py  test_float_is_close.c
include/: float_is_close.h
src/: float_is_close.c
tests/: test_float_is_close.c
